# Embedded-World

./: .gitignore  CMakeLists.txt  README.md  failist_parse_comment_failure.c  failist_parse_failure.c  failist_parse_failure.h  failist_parse_id_component.h  failist_parse_id_failure.h  failist_parse_id_plane.c  failist_parse_id_plane.h  failist_parse_nb_failures.c  main.c  makefile
FailistSimulation/FailistSimulation/: FailistSimulation.csproj  Form1.cs
docs/: Embedded_World-Request_for_proposal-Annex1.xlsx  Template-Software-Architecture-Specifications-V2.docx  Template-Software-Qualification-Specifications-Acceptance-V2.docx  ~$mplate-Software-Architecture-Specifications-V2.docx
faillist/: CMakeLists.txt
faillist/src/: error_report.c  error_report.h  main.c
faillist/src/data/: faillist_validated_data_failure.h  validated_data_header.h
faillist/src/parsing/: failist_data_failure.h  failist_parse_comment_failure_size.h  failist_parse_failure.c  failist_parse_header.h  failist_parse_id_component.c  failist_parse_id_failure.c  failist_parse_id_plane.c  failist_parse_id_plane.h  failist_parse_level_criticity.h  failist_parse_type_plane.c  failure.c  failure.h  header.c  header.h
faillist/src/parsing/failure/: comment_failure.c  comment_failure.h  comment_failure_size.c  comment_failure_size.h  date.c  date.h  id_component.c  id_component.h  id_failure.c  id_failure.h  level_criticity.c  level_criticity.h
faillist/src/parsing/header/: id_plane.c  id_plane.h  nb_failures.c  nb_failures.h  type_plane.c  type_plane.h
faillist/src/validation/: failure.c  failure.h  header.c  header.h  type_plane.c  type_plane.h
faillist/src/validation/failure/: comment.c  comment.h  datetime.c  datetime.h  id_component.c  id_component.h  id_failure.c  id_failure.h  level_criticity.c  level_criticity.h
faillist/src/validation/header/: id_plane.c  id_plane.h  nb_failures.c  nb_failures.h  type_plane.c  type_plane.h
faillist/src/writing/: failure.c  failure.h  header.c  header.h  open_file.c  open_file.h
faillist/src/writting/: open_file.c  open_file.h  open_file.h.gch  write_failure.c  write_failure.h  write_failure.h.gch  write_header.c  write_header.h  write_header.h.gch
faillist/test_ceedling/: project.yml
faillist/test_ceedling/test/parsing/header/: test_id_plane.c
faillist/test_ceedling/test/validation/header/: nottest_id_plane.c  test_id_plane.c  test_nb_failures.c  test_type_plane.c
faillist/test_ceedling/test/writing/: test_writing_open_file.c
parsing/src/: failist_data_failure.h  failist_data_header.h  failist_parse_comment_failure.c  failist_parse_id_component.c  failist_parse_id_failure.c  failist_parse_level_criticity.c  failist_parse_nb_failures.h  failist_parse_type_plane.c  failist_string_to_array.c  failist_string_to_array.h  main.c  makefile
src/: error_report.c  error_report.h  failist_parse_comment_failure.h  failist_parse_comment_failure_size.c  failist_parse_date.c  failist_parse_date.h  failist_parse_failure.h  failist_parse_header.c  failist_parse_nb_failures.c  failist_parse_type_plane.h  main.c  max_comment_size.h
src/data/: parsed_data_failure.h  (+2 more)
(+51 files in other folders)
